# ME299-Teleoperation_on_FR3_and_Heal

./: .gitignore  Multikey.py  README.md  Readme.md  Single_key.py  joint_comnds.py
add2num/: CMakeLists.txt  package.xml
add2num/launch/: start_add2num.launch
add2num/scripts/: number1.py  number2.py  result.py
heal_teleop/launch/: heal_teleop.launch
heal_teleop/scripts/: cartesian_cmd_2.py  keyboard_teleop_1.py
keyboard_teleop/: CMakeLists.txt  package.xml  requirements.txt
keyboard_teleop/scripts/: cartesian_teleop.py
urdf/: robot.urdf
vision_heal_teleop/: CMakeLists.txt  package.xml
vision_heal_teleop/heal_meshes/: MUJOCO_LOG.TXT  edited_xml.xml  heal_effort_actuation.xml  heal_scene.xml  moveit.launch  red_cube_scene.xml  robot.urdf  target.xml
vision_heal_teleop/scripts/: aruco_graph.py  mujocomimic.py  vision_data_pub.py  vision_data_pub_nogripper.py  vision_data_sub.py
